--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+appdirs==1.4.4
+black==21.6b0
 click==8.0.1
 cycler==0.10.0
 gitdb==4.0.7
@@ -5,17 +7,21 @@ GitPython==3.1.18
 joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.4.2
+mypy-extensions==0.4.3
 numpy==1.21.0
 pandas==1.2.5
+pathspec==0.8.1
 Pillow==8.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+regex==2021.7.1
 scikit-learn==0.24.2
 scipy==1.7.0
 six==1.16.0
 sklearn==0.0
 smmap==4.0.0
 threadpoolctl==2.1.0
+toml==0.10.2
 typing==3.7.4.3
 xgboost==1.4.2
